--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="loco.css">
 </head>
 
 <body>
+    <div id="cursor"></div>
     <div id="main">
         <div id="landing">
             <div id="nav" class="spaceBetween">
@@ -36,7 +38,56 @@
                 </div>
             </div>
         </div>
+        <div id="second">
+            <div class="elem spaceBetween">
+                <img src="images/plug.png" alt="">
+                <h1>THE PLUG</h1>
+                <h6>2022</h6>
+            </div>
+            <div class="elem spaceBetween">
+                <img src="images/ixperience.png" alt="">
+                <h1>IXPERIENCE</h1>
+                <h6>2022</h6>
+            </div>
+            <div class="elem spaceBetween">
+                <img src="images/hudu.png" alt="">
+                <h1>HUDU</h1>
+                <h6>2021</h6>
+            </div>
+        </div>
+        <div id="about">
+            <img src="images/cynthia.png" alt="">
+            <div id="textabout">
+                <h5>(ABOUT ME)</h5>
+                <p>
+                    I'm a product designer with a passion for creating products that not only look good but also solve
+                    real problems. When I'm not sketching ideas on paper, you can find me binge-watching a Netflix
+                    series or playing video games. My design philosophy is simple: make it visually appealing,
+                    functional, and bring a smile to people's faces. I'm the designer you want on your team if you want
+                    to make people say 'I need that in my life!'.
+                </p>
+                <a href="">Let's talk</a>
+            </div>
+        </div>
+        <div id="subscribe">
+            <h5>(FORGOT TO MENTION)</h5>
+            <h5>SUBSCRIBE TO MY YOUTUBE CHANNEL<i class="ri-arrow-right-up-line"></i></h5>
+        </div>
+        <div id="footer" class="spaceBetween">
+            <div id="footerleft">
+                <h4>2023 &copy;</h4>
+                <h4>00:00 AM EST</h4>
+            </div>
+            <div id="footerright">
+                <a href="#">DRIBBBLE</a>
+                <a href="#">INSTAGRAM</a>
+                <a href="#">LINKEDIN</a>
+                <a href="#">TWITTER</a>
+            </div>
+        </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="app.js"></script>
 </body>
 
