added skew to cursor

--- a/index.html
+++ b/index.html
@@ -19,15 +19,25 @@
                 <h4>menu+</h4>
             </div>
             <div id="heading">
-                <h1>product</h1>
+                <div class="bounding">
+                    <h1 class="boundingelem">product</h1>
+                </div>
                 <div id="lowerHeading">
-                    <h1 id="secondh1">designer</h1>
-                    <h4>based in toronto</h4>
+                    <div class="bounding">
+                        <h1 id="secondh1" class="boundingelem">designer</h1>
+                    </div>
+                    <div class="bounding">
+                        <h4 class="boundingelem">based in toronto</h4>
+                    </div>
                 </div>
             </div>
             <div id="smallHeadings">
-                <h5>available for freelance</h5>
-                <h5>work from may 23'</h5>
+                <div class="bounding">
+                    <h5 class="boundingelem">available for freelance</h5>
+                </div>
+                <div class="bounding">
+                    <h5 class="boundingelem">work from may 23'</h5>
+                </div>
             </div>
             <div id="landingFooter" class="spaceBetween">
                 <a href="#">previously worked at yml <i class="ri-arrow-right-up-line"></i></a>
@@ -87,7 +97,9 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"
+        integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="app.js"></script>
 </body>
 
